<resources>
    <string name="app_name">HYME</string>

    <!-- main activity -->
    <string name="activity_main_title">HYME</string>
    <string name="activity_main_title_acronym">(Have Your Meeting Easy!)</string>
    <string name="activity_main_title_description">원격회의에 최적화된 당신의 회의도우미</string>
    <string name="activity_main_login">하이미 계정으로 로그인</string>

    <!-- register activity -->
    <string name="activity_login_description">로그인 정보 입력</string>
    <string name="activity_login_id">Username</string>
    <string name="activity_login_password">****</string>
    <string name="activity_login_register">회원가입</string>
    <string name="activity_login_login">로그인</string>

    <!-- meeting list activity -->
    <string name="activity_meeting_title">회의방 목록</string>
    <string name="activity_meeting_create">추가</string>

    <!-- speech activity -->
    <string name="activity_speech_speaker">현재 발언자</string>
    <string name="activity_speech_speaker_name">홍길동</string>
    <string name="activity_speech_say">우리가 4차 산업혁명을 통해 알아야 할 것은...</string>
    <string name="activity_speech_want">발언하기</string>
    <string name="activity_speech_ongoing">발언중...(발언종료)</string>
    <string name="activity_speech_participants">회의 참여자</string>
    <string name="activity_speech_log">로그</string>
    <string name="activity_speech_status">진행 상황</string>
    <string name="activity_speech_ready">준비중..</string>
    <string name="activity_speech_formal">이전 발언 :</string>

    <!-- speech request dialog -->
    <string name="dialog_request_speech_content">아무개 님께서 발언권을 요청하였습니다.</string>
    <string name="dialog_request_speech_accept">수락</string>
    <string name="dialog_request_speech_deny">거절</string>

    <!-- speech dialog -->
    <string name="dialog_speech_comment">발언의 종류를 골라주세요</string>
    <string name="dialog_speech_opinion">의견</string>
    <string name="dialog_speech_ask">질문</string>
    <string name="dialog_speech_additional">추가내용</string>
    <string name="dialog_speech_answer">답변</string>
    <string name="dialog_speech_refutation">반박</string>
    <string name="dialog_speech_etc">기타</string>
    <string name="dialog_speech_ongoing">발언중</string>

    <!-- participant activity -->
    <string name="activity_participant_title">Progress</string>
    <string name="activity_participant_title_kor">회의 진행 상황</string>
    <string name="activity_participant_list">회의 참여자</string>
    <string name="activity_participant_log">회의 로그</string>
    <string name="activity_participant_number">번호</string>
    <string name="activity_participant_name">이름</string>
    <string name="activity_participant_type">종류</string>
    <string name="activity_participant_authority">발언권</string>
    <string name="activity_participant_content">내용</string>
    <string name="activity_participant_waiting_message">발언대기자 : </string>
    <string name="activity_participant_waating_list">코난, 남도일, 김전일</string>

    <!-- log activity -->
    <string name="activity_log_title">회의 로그</string>
    <string name="activity_log_message"><li>발언 종류</li></string>
    <string name="activity_log_name">발언자</string>
    <string name="activity_log_share">공유</string>

    <!-- download activity -->
    <string name="activity_download_title">Download</string>
    <string name="activity_download_title_kor">회의 내용 다운로드</string>
    <string name="activity_download_select_type">출력 속성 선택</string>
    <string name="activity_download_select_format">파일 확장자 선택</string>
    <string name="activity_download_select_format_word">Word</string>
    <string name="activity_download_select_format_pdf">PDF</string>
    <string name="activity_download_select_confirm">Download</string>
    <string name="activity_download_select_downloading">다운로드 중...</string>

    <!-- popup register -->
    <string name="popup_register_title">회원가입</string>
    <string name="popup_register_id">아이디</string>
    <string name="popup_register_id_confirm">중복확인</string>
    <string name="popup_register_pw">비밀번호</string>
    <string name="popup_register_pw_msg">4자리 이상 입력해주세요</string>
    <string name="popup_register_pw_confirm">비밀번호 확인</string>
    <string name="popup_register_name">이름/\n닉네임</string>
    <string name="popup_register_phone_num">핸드폰\n번호</string>
    <string name="popup_register_confirm">가입완료</string>
    <string name="popup_register_cancel">취소</string>

    <!-- create room activity -->
    <string name="activity_create_title">회의방 생성</string>
    <string name="activity_create_name">제목</string>
    <string name="activity_create_participant_num">참여인원</string>
    <string name="activity_create_participant_list">참여자 목록</string>
    <string name="activity_create_participant_add">추가</string>
    <string name="activity_create_participant_search">찾기</string>
    <string name="activity_create_time">시작일자</string>
    <string name="activity_create_current_time">현재 시간으로 지정</string>
    <string name="activity_create_alarm">알림설정</string>
    <string name="activity_create_confirm">회의방 만들기</string>
    <string name="activity_create_cancel">취소</string>
    <string name="activity_create_year">년</string>
    <string name="activity_create_month">월</string>
    <string name="activity_create_day">일</string>
    <string name="activity_create_hour">시</string>
    <string name="activity_create_minute">분</string>
    <string name="activity_create_am">오전</string>
    <string name="activity_create_pm">오후</string>
    <string name="activity_create_time_def">00</string>
    <string name="activity_create_year_def">0000</string>

    <!-- speech detail activity -->
    <string name="activity_detail_title">세부 내용</string>
    <string name="activity_detail_speecher">발언자 :</string>
    <string name="activity_detail_type">발언 종류 :</string>
    <string name="activity_detail_content">내용 :</string>
    <string name="activity_detail_save">저장</string>
    <string name="activity_detail_cancel">취소</string>

</resources>
