<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="6">

    <TextView
        android:id="@+id/tv_participant_number"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="1.3"
        android:gravity="center"
        android:text="@string/activity_participant_number"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_participant_name"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="1.7"
        android:gravity="center"
        android:text="@string/activity_participant_name"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_participant_authority"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/activity_participant_authority"
        android:textSize="15dp" />

</LinearLayout>