<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:weightSum="12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_log_title"
            android:textColor="@color/darkBlue"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">

            <Button
                android:id="@+id/bt_share"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/round_shape"
                android:backgroundTint="@color/cleanBlue"
                android:clickable="false"
                android:text="@string/activity_log_share"
                android:textColor="#ffffff"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activity_log_message"
            android:textSize="17dp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- checkbox(speech type) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <CheckBox
                android:id="@+id/cb_type_opinion"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/dialog_speech_opinion"
                android:textSize="12dp" />

            <CheckBox
                android:id="@+id/cb_type_ask"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/dialog_speech_ask"
                android:textSize="12dp" />

            <CheckBox
                android:id="@+id/cb_type_answer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/dialog_speech_answer"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="3">

            <CheckBox
                android:id="@+id/cb_type_refute"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/dialog_speech_refutation"
                android:textSize="12dp" />

            <CheckBox
                android:id="@+id/cb_type_additional"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/dialog_speech_additional"
                android:textSize="12dp" />

            <CheckBox
                android:id="@+id/cb_type_etc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/dialog_speech_etc"
                android:textSize="12dp" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3" />

    <!-- listview(from log list) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.8"
        android:background="@color/gray"
        android:orientation="vertical"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@color/narrowBlue"
            android:weightSum="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="@string/activity_participant_name"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="@string/activity_participant_type"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/activity_participant_content"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7">

            <ListView
                android:id="@+id/lv_participant_log"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lightBlue"
                android:dividerHeight="2dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_go_previous"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_weight="0.6"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/skyBlue"
        android:text="뒤로가기"
        android:textColor="#ffffff" />

</LinearLayout>