<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_detail_title"
            android:textColor="@color/Orange"
            android:textSize="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end">

            <Button
                android:id="@+id/bt_detail_save"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:background="@drawable/round_shape"
                android:backgroundTint="@color/cleanBlue"
                android:text="@string/activity_detail_save"
                android:textColor="#ffffff"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/bt_detail_cancel"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:background="@drawable/round_shape"
                android:backgroundTint="@color/lightBlue"
                android:text="@string/activity_detail_cancel"
                android:textColor="#ffffff"
                android:layout_marginRight="10dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_detail_speecher"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_speecher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_detail_type"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="18dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_detail_content"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_detail_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:gravity="fill_horizontal"
            android:textSize="18dp" />

    </LinearLayout>

</LinearLayout>