<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="6">

    <TextView
        android:id="@+id/tv_log_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_log_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/activity_participant_name"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_log_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/activity_participant_type"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_log_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.3"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/activity_participant_content"
        android:textSize="15dp"
        android:maxLength="50"/>

</LinearLayout>